gfx/src/nsFont.h
@@ -60,7 +60,7 @@ struct nsFont final {
   // Some font-variant-alternates property values require
   // font-specific settings defined via @font-feature-values rules.
   // These are resolved *after* font matching occurs.
-  mozilla::StyleVariantAlternatesList variantAlternates;
+  mozilla::StyleFontVariantAlternates variantAlternates;
 
   // Variant subproperties
   uint16_t variantLigatures = NS_FONT_VARIANT_LIGATURES_NORMAL;
